--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #1a1a1a;
+    color: #ffffff;
     margin: 0;
     padding: 20px;
 }
@@ -11,13 +12,13 @@ header {
 }
 
 h1 {
-    color: #333;
+    color: #00aaff;
 }
 
 h2 {
-    color: #555;
+    color: #00aaff;
     margin-top: 20px;
-}
+ }
 
 ul {
     list-style-type: none;
@@ -25,11 +26,17 @@ ul {
 }
 
 li {
-    background: #fff;
+    background: #333;
     margin: 5px 0;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #00aaff;
     border-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+
+li img {
+    margin-right: 10px;
 }
 
 table {
@@ -39,14 +46,14 @@ table {
 }
 
 th, td {
-    border: 1px solid #ddd;
+    border: 1px solid #00aaff;
     padding: 8px;
     text-align: left;
 }
 
 th {
-    background-color: #f2f2f2;
-    color: #333;
+    background-color: #005577;
+    color: #ffffff;
 }
 
 img {
@@ -60,6 +67,6 @@ footer {
     margin-top: 20px;
     text-align: center;
     padding: 10px;
-    background-color: #eaeaea;
-    border-top: 1px solid #ddd;
+    background-color: #333;
+    border-top: 1px solid #00aaff;
 }
